syntax = "proto3";
package messages;
import "github.com/AsynkronIT/gam/actor/protos.proto";

message MessageEnvelope {
  string type_name = 1;
  bytes message_data = 2;
  actor.PID target = 3;
  actor.PID sender = 4;
}

message MessageBatch {
  repeated MessageEnvelope envelopes = 1;
}

message Unit {}

service Remoting {
  rpc Receive (stream MessageBatch) returns (Unit) {}
}
